--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         </div>    
                     </div>    
                     <div class="guest-container">
-                        <h3 class="board-title">GUEST</h3>
+                        <h3 class="board-title">AWAY</h3>
                         <div class="guest-score-container"> 
                             <h2 class="points-text" id="guest-score">0</h2>
                         </div>   
